package com.idvey.afya.models;

public enum ERole {

	ROLE_USER, ROLE_ADMIN

}
